# Tibert

./: .gitignore  README.md  pyproject.toml
tests/: strategies.py  test_bertcoref.py  test_score.py  test_train.py  test_utils.py
tibert/: bertcoref.py  predict.py  run_test.py  run_train.py  score.py  train.py  utils.py
