[project]
name = "tibert"
version = "0.4.1"
description = "BERT for Coreference Resolution"
authors = [{ name = "Arthur Amalvy", email = "arthur.amalvy@univ-avignon.fr" }]
requires-python = ">=3.8,<4,<3.11"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "torch>=2.0.0, !=2.0.1",
    "transformers>=4.32.1,<5",
    "tqdm>=4.62.3,<5",
    "networkx>=2.6.3,<3",
    "more-itertools>=10.1.0",
    "neleval>=3.1.1,<4",
    "rich>=13.5.3",
    "sacremoses>=0.0.53",
]

[dependency-groups]
dev = [
    "hypothesis>=6.82.3",
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.sdist]
include = ["tibert"]

[tool.hatch.build.targets.wheel]
include = ["tibert"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
